<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="navigation_drawer_items_array">
        <item>Everything</item>
        <item>TV Shows</item>
        <item>Movies</item>
        <item>Games</item>
        <item>Music</item>
        <item>Books</item>
        <item>Applications</item>
        <item>About…</item>
    </string-array>

    <string name="app_name">Thorrent</string>
    <string name="TVShows">TV Shows</string>
    <string name="Movies">Movies</string>
    <string name="About">About…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="Games">Games</string>
    <string name="Music">Music</string>
    <string name="Books">Books</string>
    <string name="Applications">Applications</string>
    <string name="Everything">Everything</string>
    <string name="RefreshingMessage">Refreshing…</string>
    <string name="title_activity_about">About Thorrent</string>
    <string name="Version">Version</string>
    <string name="AboutMessage">Made with love by the folks at Cryptocodes, Inc.</string>
    <string name="ReleaseDate">October 8th, 2015</string>
    <string name="cryptocodesUrl">http://www.cryptocodes.com</string>
    <string name="TorrentProviderInfo">Torrent information provided by ScnSrc</string>
    <string name="loading_dialog_header">Loading…</string>
    <string name="loading_dialog_content">Please wait while we fetch the data from the Torrent sources</string>
    <string name="CheckInternetConn">Could not fetch RSS feed, check your internet connection</string>
    <string name="quality_text">Quality</string>
    <string name="rating_text">Rating</string>
    <string name="by_user_text">By</string>
    <string name="title_activity_media_detail">Details</string>
    <string name="Share">Share</string>
    <string name="pref_description_friendly_name">Displays a user-friendly name of the release</string>
    <string name="pref_title_friendly_name">User-friendly name</string>
    <string name="share_body_message">Hey, I\'m using Thorrent to see what was released online. Check it out at http://tinyurl.com/on4p7ns</string>
    <string name="share_header_text">Check out Thorrent!</string>
    <string name="share_via_header">Share via</string>
    <string name="pref_title_enable_info">Enable media information</string>
    <string name="pref_description_enable_info">Shows TV Show / Movie poster along with a plot summary and ratings
        (could slow down performance significantly)
    </string>
    <string name="pref_header_general">General</string>
    <string name="title_activity_settings">Settings</string>
    <string name="logoDescription">Cryptocodes Logo</string>
</resources>
