<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="enable_info_setting"
        android:title="@string/pref_title_enable_info"
        android:summary="@string/pref_description_enable_info"
        android:defaultValue="true" />

    <CheckBoxPreference
        android:key="show_friendly_name"
        android:title="@string/pref_title_friendly_name"
        android:summary="@string/pref_description_friendly_name"
        android:defaultValue="true" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--<EditTextPreference-->
        <!--android:key="example_text"-->
        <!--android:title="@string/pref_title_display_name"-->
        <!--android:defaultValue="@string/pref_default_display_name"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:inputType="textCapWords"-->
        <!--android:capitalize="words"-->
        <!--android:singleLine="true"-->
        <!--android:maxLines="1" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:key="example_list"-->
        <!--android:title="@string/pref_title_add_friends_to_messages"-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null" />-->

</PreferenceScreen>
